--- a/src/main/resources/templates/fragments/front/survey/common.html
+++ b/src/main/resources/templates/fragments/front/survey/common.html
@@ -63,10 +63,10 @@ xmlns:th="http://www.thymeleaf.org">
 		<footer>
 			<div class="container clearfix">
 				<ul>
-					<li><a href="#" class="animated_link active">[거울] 비규격주문</a></li>
-					<li><a href="#" class="animated_link">[상부장] 비규격주문</a></li>
-					<li><a href="#" class="animated_link">[슬라이드장] 비규격주문</a></li>
-					<li><a href="#" class="animated_link">[하부장] 비규격주문</a></li>
+					<li><a href="/survey" class="animated_link active">[거울] 비규격주문</a></li>
+					<li><a href="/survey" class="animated_link">[상부장] 비규격주문</a></li>
+					<li><a href="/survey" class="animated_link">[슬라이드장] 비규격주문</a></li>
+					<li><a href="/survey" class="animated_link">[하부장] 비규격주문</a></li>
 				</ul>
 				<p>© 2024 STEPs</p>
 			</div>
