--- a/src/main/resources/templates/fragments/front/minimal/common.html
+++ b/src/main/resources/templates/fragments/front/minimal/common.html
@@ -91,7 +91,7 @@
 								<div class="site-logo">
 									<a href="#">
 										<img width="400" height="79" src="/front/minimal/media/logo.png"
-											alt="Ruper – Furniture HTML Theme" />
+											alt="#" />
 									</a>
 								</div>
 							</div>
