--- a/src/main/resources/templates/front/beauty/index.html
+++ b/src/main/resources/templates/front/beauty/index.html
@@ -75,85 +75,13 @@ xmlns:th="http://www.thymeleaf.org">
 				</div>
 			</section>
 
-			<section id="section-text">
-				<div class="container">
-					<div class="row align-items-center">
-						<div class="col-lg-4 col-md-12 wow fadeInRight" data-wow-delay=".2s">
-							<div class="de_count ultra-big s2 text-center">
-								<h3 class="timer" data-to="25" data-speed="1000">25</h3>
-								<span class="text-dark">Years of Experience</span>
-							</div>
-						</div>
-						<div class="col-lg-4 p-lg-5  mb-sm-30 wow fadeInRight" data-wow-delay=".4s">
-							<h2 class="style-2 id-color">Welcome</h2>
-							<h2>Your Best Partner for Architecture and Construction</h2>
-						</div>
-
-						<div class="col-lg-4 wow fadeInRight" data-wow-delay=".6s">
-							<p>
-								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-								voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
-								occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt
-								mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et
-								expedita distinctio. At vero eos et accusamus et iusto odio dignissimos ducimus qui
-								blanditiis praesentium voluptatum deleniti.
-							</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section id="section-testimonial" data-bgimage="url(/front/beauty/images-architect/bg/1.jpg) fixed" aria-label="section"
-				class="text-light">
-				<div class="container">
-					<div class="row">
-
-						<div class="col-md-8 offset-md-2 wow fadeInUp">
-
-							<div id="testimonial-carousel-single" class="owl-carousel owl-theme wow fadeInUp">
-								<blockquote class="testimonial-big">
-									<span class="title">Amazing, beyond our expectation!</span>
-									We always impressed with the quality. Lorem ipsum dolor sit amet, consectetur
-									adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-									Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
-
-									<span class="name">John, Four Seasons Hotel</span>
-								</blockquote>
-
-								<blockquote class="testimonial-big">
-									<span class="title">Modern and great design!</span>
-									Just wow! I'm always impressed with the services. Lorem ipsum dolor sit amet,
-									consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-									magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
-
-									<span class="name">Sandra, Hilton Hotel</span>
-								</blockquote>
-
-								<blockquote class="testimonial-big">
-									<span class="title">Better than we think!</span>
-									I'm always impressed with the services. Lorem ipsum dolor sit amet, consectetur
-									adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-									Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
-
-									<span class="name">Michael, Central Park Mall</span>
-								</blockquote>
-							</div>
-
-						</div>
-
-					</div>
-
-				</div>
-			</section>
-
-
 
 			<section id="section-services">
 
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 offset-md-3 text-center wow fadeInUp">
-							<h1>Our Services</h1>
+							<h1>히든바스 SERVICE</h1>
 							<div class="separator"><span><i class="fa fa-square"></i></span></div>
 							<div class="spacer-single"></div>
 						</div>
@@ -165,9 +93,9 @@ xmlns:th="http://www.thymeleaf.org">
 								<img src="/front/beauty/images-architect/services/1.jpg" class="img-responsive" alt="">
 
 								<div class="text padding30" data-bgcolor="#ffffff">
-									<h3>New Construction</h3>
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-										doloremque laudantium, totam rem aperiam, eaque ipsa.</p>
+									<h3>서비스 TITLE</h3>
+									<p>=== 서비스 CONTENCTs ===</p>
+									<p>=== 서비스 CONTENCTs ===</p>
 								</div>
 							</div>
 						</div>
@@ -176,9 +104,9 @@ xmlns:th="http://www.thymeleaf.org">
 							<div class="shadow-light">
 								<img src="/front/beauty/images-architect/services/2.jpg" class="img-responsive" alt="">
 								<div class="text padding30" data-bgcolor="#ffffff">
-									<h3>Remodeling</h3>
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-										doloremque laudantium, totam rem aperiam, eaque ipsa.</p>
+									<h3>서비스 TITLE</h3>
+									<p>=== 서비스 CONTENCTs ===</p>
+									<p>=== 서비스 CONTENCTs ===</p>
 								</div>
 							</div>
 						</div>
@@ -188,9 +116,9 @@ xmlns:th="http://www.thymeleaf.org">
 								<img src="/front/beauty/images-architect/services/3.jpg" class="img-responsive" alt="">
 
 								<div class="text padding30" data-bgcolor="#ffffff">
-									<h3>Tenant Improvment</h3>
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-										doloremque laudantium, totam rem aperiam, eaque ipsa.</p>
+									<h3>서비스 TITLE</h3>
+									<p>=== 서비스 CONTENCTs ===</p>
+									<p>=== 서비스 CONTENCTs ===</p>
 								</div>
 							</div>
 						</div>
@@ -199,9 +127,9 @@ xmlns:th="http://www.thymeleaf.org">
 							<div class="shadow-light">
 								<img src="/front/beauty/images-architect/services/4.jpg" class="img-responsive" alt="">
 								<div class="text padding30" data-bgcolor="#ffffff">
-									<h3>Interior Design</h3>
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-										doloremque laudantium, totam rem aperiam, eaque ipsa.</p>
+									<h3>서비스 TITLE</h3>
+									<p>=== 서비스 CONTENCTs ===</p>
+									<p>=== 서비스 CONTENCTs ===</p>
 								</div>
 							</div>
 						</div>
@@ -217,12 +145,11 @@ xmlns:th="http://www.thymeleaf.org">
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-lg-8 col-md-7">
-							<h3 class="size-2 no-margin">We Are the <span class="id-color">Leading</span> of
-								Construction Company</h3>
+							<h3 class="size-2 no-margin">히든은 <span class="id-color">비규격 주문을</span> 제공합니다.</h3>
 						</div>
 
 						<div class="col-lg-4 col-md-5 text-right">
-							<a href="contact.html" class="btn-line-white">Contact Us Now</a>
+							<a href="#" class="btn-line-white">비규격주문 하러가기</a>
 						</div>
 					</div>
 				</div>
@@ -235,18 +162,18 @@ xmlns:th="http://www.thymeleaf.org">
 					<div class="row">
 
 						<div class="col-md-6 offset-md-3 text-center wow fadeInUp">
-							<h1>Our Recent Works</h1>
+							<h1>=== 제품 카테고리별 조회 PAGING SECTION ==</h1>
 							<div class="separator"><span><i class="fa fa-square"></i></span></div>
 							<div class="spacer-single"></div>
 						</div>
 
 						<div class="col-md-12">
 							<ul id="filters" class="wow fadeInUp" data-wow-delay="0s">
-								<li><a href="#" data-filter=".category-1">New Construction</a></li>
-								<li><a href="#" data-filter=".category-2">Remodeling</a></li>
-								<li><a href="#" data-filter=".category-3">Tenant Improvment</a></li>
-								<li><a href="#" data-filter=".category-4">Interior Design</a></li>
-								<li class="pull-right"><a href="#" data-filter="*" class="selected">All Projects</a>
+								<li><a href="#" data-filter=".category-1">카테고리</a></li>
+								<li><a href="#" data-filter=".category-2">카테고리</a></li>
+								<li><a href="#" data-filter=".category-3">카테고리</a></li>
+								<li><a href="#" data-filter=".category-4">카테고리</a></li>
+								<li class="pull-right"><a href="#" data-filter="*" class="selected">VIEW ALL</a>
 								</li>
 							</ul>
 
