--- a/src/main/resources/templates/front/productList.html
+++ b/src/main/resources/templates/front/productList.html
@@ -487,7 +487,7 @@
 																		</div>
 																	</div>
 																	<div class="product-thumb-hover">
-																		<a href="shop-details.html">
+																		<a href="#">
 																			<img width="600" height="600"
 																				src="/front/clean/media/product/6.jpg"
 																				class="post-image" alt="">
@@ -520,7 +520,8 @@
 																				등록하기</button>
 																		</div>
 																	</div>
-																	<div class="product-description">=== 제품 DESCRIPTION ===</div>
+																	<div class="product-description">=== 제품 DESCRIPTION
+																		===</div>
 																</div>
 															</div>
 														</div>
@@ -534,7 +535,7 @@
 																		</div>
 																	</div>
 																	<div class="product-thumb-hover">
-																		<a href="shop-details.html">
+																		<a href="#">
 																			<img width="600" height="600"
 																				src="/front/clean/media/product/6.jpg"
 																				class="post-image" alt="">
@@ -567,7 +568,8 @@
 																				등록하기</button>
 																		</div>
 																	</div>
-																	<div class="product-description">=== 제품 DESCRIPTION ===</div>
+																	<div class="product-description">=== 제품 DESCRIPTION
+																		===</div>
 																</div>
 															</div>
 														</div>
@@ -581,7 +583,7 @@
 																		</div>
 																	</div>
 																	<div class="product-thumb-hover">
-																		<a href="shop-details.html">
+																		<a href="#">
 																			<img width="600" height="600"
 																				src="/front/clean/media/product/6.jpg"
 																				class="post-image" alt="">
@@ -614,7 +616,8 @@
 																				등록하기</button>
 																		</div>
 																	</div>
-																	<div class="product-description">=== 제품 DESCRIPTION ===</div>
+																	<div class="product-description">=== 제품 DESCRIPTION
+																		===</div>
 																</div>
 															</div>
 														</div>
@@ -628,7 +631,7 @@
 																		</div>
 																	</div>
 																	<div class="product-thumb-hover">
-																		<a href="shop-details.html">
+																		<a href="#">
 																			<img width="600" height="600"
 																				src="/front/clean/media/product/6.jpg"
 																				class="post-image" alt="">
@@ -661,8 +664,8 @@
 																				등록하기</button>
 																		</div>
 																	</div>
-																	<div class="product-description">=== 제품 DESCRIPTION ===</div>
-																	</div>
+																	<div class="product-description">=== 제품 DESCRIPTION
+																		===</div>
 																</div>
 															</div>
 														</div>
@@ -676,55 +679,7 @@
 																		</div>
 																	</div>
 																	<div class="product-thumb-hover">
-																		<a href="shop-details.html">
-																			<img width="600" height="600"
-																				src="/front/clean/media/product/6.jpg"
-																				class="post-image" alt="">
-																			<img width="600" height="600"
-																				src="/front/clean/media/product/6-2.jpg"
-																				class="hover-image back" alt="">
-																		</a>
-																	</div>
-																	<span class="product-quickview"
-																		data-title="Quick View">
-																		<a href="#"
-																			class="quickview quickview-button">자세히보기<i
-																				class="icon-search"></i></a>
-																	</span>
-																</div>
-															</div>
-															<div class="col-md-8">
-																<div class="products-content">
-																	<h3 class="product-title"><a href="#">제품명</a>
-																	</h3>
-																	<span class="price hashtag"># HASHTAG # HASHTAG #
-																		HASHTAG # HASHTAG # HASHTAG</span>
-																	<div class="btn-add-to-cart" data-title="#">
-																		<a rel="nofollow" href="#"
-																			class="product-btn button">자세히 보기</a>
-																	</div>
-																	<div class="product-button">
-																		<div class="btn-compare" data-title="Compare">
-																			<button class="product-btn">비교제품
-																				등록하기</button>
-																		</div>
-																	</div>
-																	<div class="product-description">Product Description
-																	</div>
-																</div>
-															</div>
-														</div>
-													</div>
-													<div class="products-entry clearfix product-wapper">
-														<div class="row">
-															<div class="col-md-4">
-																<div class="products-thumb">
-																	<div class="product-lable">
-																		<div class="hot product_category">대분류 / 중분류
-																		</div>
-																	</div>
-																	<div class="product-thumb-hover">
-																		<a href="shop-details.html">
+																		<a href="#">
 																			<img width="600" height="600"
 																				src="/front/clean/media/product/6.jpg"
 																				class="post-image" alt="">
@@ -772,7 +727,7 @@
 																		</div>
 																	</div>
 																	<div class="product-thumb-hover">
-																		<a href="shop-details.html">
+																		<a href="#">
 																			<img width="600" height="600"
 																				src="/front/clean/media/product/6.jpg"
 																				class="post-image" alt="">
@@ -820,7 +775,7 @@
 																		</div>
 																	</div>
 																	<div class="product-thumb-hover">
-																		<a href="shop-details.html">
+																		<a href="#">
 																			<img width="600" height="600"
 																				src="/front/clean/media/product/6.jpg"
 																				class="post-image" alt="">
@@ -868,7 +823,55 @@
 																		</div>
 																	</div>
 																	<div class="product-thumb-hover">
-																		<a href="shop-details.html">
+																		<a href="#">
+																			<img width="600" height="600"
+																				src="/front/clean/media/product/6.jpg"
+																				class="post-image" alt="">
+																			<img width="600" height="600"
+																				src="/front/clean/media/product/6-2.jpg"
+																				class="hover-image back" alt="">
+																		</a>
+																	</div>
+																	<span class="product-quickview"
+																		data-title="Quick View">
+																		<a href="#"
+																			class="quickview quickview-button">자세히보기<i
+																				class="icon-search"></i></a>
+																	</span>
+																</div>
+															</div>
+															<div class="col-md-8">
+																<div class="products-content">
+																	<h3 class="product-title"><a href="#">제품명</a>
+																	</h3>
+																	<span class="price hashtag"># HASHTAG # HASHTAG #
+																		HASHTAG # HASHTAG # HASHTAG</span>
+																	<div class="btn-add-to-cart" data-title="#">
+																		<a rel="nofollow" href="#"
+																			class="product-btn button">자세히 보기</a>
+																	</div>
+																	<div class="product-button">
+																		<div class="btn-compare" data-title="Compare">
+																			<button class="product-btn">비교제품
+																				등록하기</button>
+																		</div>
+																	</div>
+																	<div class="product-description">Product Description
+																	</div>
+																</div>
+															</div>
+														</div>
+													</div>
+													<div class="products-entry clearfix product-wapper">
+														<div class="row">
+															<div class="col-md-4">
+																<div class="products-thumb">
+																	<div class="product-lable">
+																		<div class="hot product_category">대분류 / 중분류
+																		</div>
+																	</div>
+																	<div class="product-thumb-hover">
+																		<a href="#">
 																			<img width="600" height="600"
 																				src="/front/clean/media/product/6.jpg"
 																				class="post-image" alt="">
